--- a/apps/lang/english.lang
+++ b/apps/lang/english.lang
@@ -12103,6 +12103,23 @@
   </voice>
 </phrase>
 <phrase>
+  id: LANG_HOLD_PLAYBACK_CONTROL
+  desc: in the Playback settings menu
+  user: core
+  <source>
+    *: none
+    buttons_in_hold: "Playback Control in Hold Mode"
+  </source>
+  <dest>
+    *: none
+    buttons_in_hold: "Playback Control in Hold Mode"
+  </dest>
+  <voice>
+    *: none
+    buttons_in_hold: "Playback Control in Hold Mode"
+  </voice>
+</phrase>
+<phrase>
   id: LANG_BASE_SKIN
   desc: browse for the base skin in theme settings
   user: core
