--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -11217,6 +11217,23 @@
   </voice>
 </phrase>
 <phrase>
+  id: LANG_HOLD_PLAYBACK_CONTROL
+  desc: in the Playback settings menu
+  user: core
+  <source>
+    *: none
+    buttons_in_hold: "Playback Control in Hold Mode"
+  </source>
+  <dest>
+    *: none
+    buttons_in_hold: "Включить кнопки при блоке?"
+  </dest>
+  <voice>
+    *: none
+    buttons_in_hold: "Включить кнопки при блоке?"
+  </voice>
+</phrase>
+<phrase>
   id: LANG_NEXT_TRACK
   desc: Shown in WPS
   user: core
